@@ -10,6 +10,7 @@ Vcs-Browser: https://salsa.debian.org/nvidia-team/nvidia-graphics-drivers
 Vcs-Git: https://salsa.debian.org/nvidia-team/nvidia-graphics-drivers.git
 Build-Depends:
  debhelper-compat (= 13),
+ dh-exec,
  xz-utils,
  dkms,
  libvulkan1 (>= 1.0.42),
