@@ -1,0 +1,6 @@
+#!/usr/bin/dh-exec --with=filter
+debian/detect/nvidia-detect			usr/bin/
+debian/detect/nvidia-legacy-*.ids		usr/share/nvidia/	[amd64 i386 armhf]
+debian/detect/nvidia-418.ids			usr/share/nvidia/	[amd64]
+debian/detect/nvidia-tesla-418.ids		usr/share/nvidia/	[amd64 ppc64el]
+nvidia.ids					usr/share/nvidia/	[!ppc64el]
